# codex-session-hub

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: perf-optimization-checklist.md
src/: App.tsx  app-types.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: core.rs  lib.rs  main.rs  platform.rs  projection.rs  rollout.rs
src/components/: AppUpdateDialog.tsx  BackupManagerSection.tsx  RecoveryDialog.tsx  SessionExplorer.tsx  TechnicalDrawer.tsx
src/hooks/: useAppUpdater.ts
