[package]
name = "codex-provider-hub"
version = "0.1.0"
description = "Repair Codex session visibility across providers"
authors = ["Codex Provider Hub"]
edition = "2021"
default-run = "codex-provider-hub"

[lib]
name = "codex_provider_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_RemoteDesktop",
  "Win32_System_RestartManager",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
