[package]
name = "codex-session-hub"
version = "0.1.4"
description = "Local Codex session tools for visibility repair across providers"
authors = ["Codex Session Hub"]
license = "MIT"
edition = "2021"
default-run = "codex-session-hub"

[lib]
name = "codex_session_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
sha2 = "0.10"
fs2 = "0.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_RemoteDesktop",
  "Win32_System_RestartManager",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "debuginfo"
